# nonebot_plugin_xiuxian_2

./: .gitignore  README.md  __init__.py  data_source.py  download_xiuxian_data.py  item_json.py  lay_out.py  package-lock.json  package.json  player_fight.py  pyproject.toml  read_buff.py  requirements.txt  setup.py  utils.py  xiuxian2_handle.py  xiuxian_config.py  xn_xiuxian_impart.py  xn_xiuxian_impart_config.py
.github/workflows/: deploy-docs.yml  deploy.yml  python-publish.yml
docs/: README.md  package-lock.json  package.json
docs/.vuepress/: config.ts  navbar.ts  theme.ts
docs/main/: README.md  faq.md  install.md  manager.md
docs/update/: README.md
nonebot_plugin_xiuxian_2/: __init__.py  read_buff.py
nonebot_plugin_xiuxian_2.0/: __init__.py
nonebot_plugin_xiuxian_2.0/xiuxian/: data_source.py  xiuxian_opertion.py
nonebot_plugin_xiuxian_2.0/xiuxian/xiuxian_impart/: __init__.py  (+1 more)
nonebot_plugin_xiuxian_2/xiuxian/: config.py  lay_out.py  utils.py  xiuxian2_handle.py  xiuxian_config.py
nonebot_plugin_xiuxian_2/xiuxian_back/: __init__.py
nonebot_plugin_xiuxian_2/xiuxian_impart_pk/: impart_pk.py  impart_pk_uitls.py
nonebot_plugin_xiuxian_2/xiuxian_rift/: __init__.py
nonebot_plugin_xiuxian_2/xiuxian_work/: __init__.py
xiuxian/: config.py
xiuxian/xiuxian_bank/: bankconfig.py
xiuxian/xiuxian_buff/: two_exp_cd.py
xiuxian/xiuxian_impart/: impart_data.py
xiuxian/xiuxian_rift/: jsondata.py
xiuxian/xiuxian_sect/: sectconfig.py
xiuxian/xiuxian_work/: __init__.py  reward_data_source.py  workmake.py
xiuxian_back/: __init__.py  back_util.py  backconfig.py
xiuxian_bank/: __init__.py  bankconfig.py
xiuxian_base/: __init__.py
xiuxian_boss/: __init__.py  bossconfig.py  makeboss.py  old_boss_info.py
xiuxian_buff/: __init__.py  two_exp_cd.py
xiuxian_impart/: __init__.py  impart_data.py  impart_uitls.py
xiuxian_impart_pk/: __init__.py  impart_pk.py  impart_pk_uitls.py  xu_world.py
xiuxian_info/: __init__.py  draw_user_info.py
xiuxian_mixelixir/: __init__.py  mix_elixir_config.py  mixelixirutil.py
xiuxian_rift/: __init__.py  old_rift_info.py  riftconfig.py  riftmake.py
xiuxian_sect/: __init__.py  sectconfig.py
xiuxian_work/: __init__.py  work_handle.py  workmake.py
(+22 files in other folders)
