[project]
name = "nonebot_plugin_xiuxian_2"
description = "基于nonebot2的修仙文游"
version = "2.7.2.2"
authors = [
    {name = "青木", email = "1242550160@qq.com"},
]
readme = "README.md"
license = {text = "GPL-3"}
requires-python = ">=3.10"
dependencies = [
            'fastapi==0.89.1',
            'nonebot-adapter-onebot==2.2.1',
            'nonebot-plugin-apscheduler==0.2.0',
            'nonebot2==2.0.0rc3',
            'numpy==1.23.5',
            'Pillow==9.4.0',
            'urllib3==1.26.14',
            'ujson==5.7.0',
            'uvicorn==0.20.0',
            'wcwidth==0.2.6',
            'websockets==10.4',
            'wget==3.2',
            'aiohttp==3.8.4',
]

[project.urls]
Homepage = "https://github.com/QingMuCat/nonebot_plugin_xiuxian_2"


[build-system]
requires = [
  "setuptools >= 67.4.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_xiuxian_2*"]
